updated emoji description overflow issue (at 'matrix-react-sdk/res/css/views/emojipicker/_EmojiPicker.pcss')

--- a/res/css/views/emojipicker/_EmojiPicker.pcss
+++ b/res/css/views/emojipicker/_EmojiPicker.pcss
@@ -224,9 +224,9 @@ limitations under the License.
 
 .mx_EmojiPicker_preview_text {
     display: flex;
-    width: 78%;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    flex:1;
+    overflow:hidden;
+    margin-right:25px;
     flex-direction: column;
 }
 
@@ -236,7 +236,6 @@ limitations under the License.
 
 .mx_EmojiPicker_shortcode {
     color: $light-fg-color;
-    overflow-wrap: break-word;
     font-size: $font-14px;
 
     &::before,
